# machine-health-monitoring

./: .gitignore  CMakeLists.txt  README.md  data_processor.cpp  sensor_monitor.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: mqtt_publisher.cpp  mqtt_subscriber.cpp
